--- a/ASPNETCORERoleManagement/Views/Competencias/Create.cshtml
+++ b/ASPNETCORERoleManagement/Views/Competencias/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ASPNETCORERoleManagement.Models.Competencias
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Agregar Competencias.";
 }
 
 <h2>Create</h2>
@@ -29,7 +29,10 @@
             </div>
             <div class="form-group">
                 <label asp-for="bukrs" class="control-label"></label>
-                <input asp-for="bukrs" class="form-control" />
+                @*<input asp-for="bukrs" class="form-control"
+        asp-items="@(new SelectList(ViewBag.DaBukrs, "Text","value"))"
+        />*@
+                <select asp-for="bukrs" class="form-control"></select>
                 <span asp-validation-for="bukrs" class="text-danger"></span>
             </div>
             <div class="form-group">
