--- a/ASPNETCORERoleManagement/Views/Competencias/Index.cshtml
+++ b/ASPNETCORERoleManagement/Views/Competencias/Index.cshtml
@@ -1,41 +1,61 @@
 ﻿@model IEnumerable<ASPNETCORERoleManagement.Models.Competencias>
 
 @{
-    ViewData["Title"] = "Competencias Catálogo";
+    ViewData["Title"] = "Competencias";
 }
 
 <h2>Competencias</h2>
 
 <p>
-    <a asp-action="Create" class="btn btn-success">Nuevo</a>
+    <a asp-action="Create">Nuevo</a>
 </p>
 <table class="table">
     <thead>
         <tr>
-                <th>
-                    @Html.DisplayNameFor(model => model.Competencia)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Competencias_Desc)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Generico)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.bukrs)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.gbukrs)
-                </th>
-            <th></th>
+            <th>
+                @*Columan de Botones*@
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Id_Competencia)
+            </th>
+
+            <th>
+                @Html.DisplayNameFor(model => model.Competencia)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Competencias_Desc)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Generico)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.bukrs)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.gbukrs)
+            </th>
+
         </tr>
     </thead>
     <tbody>
 @foreach (var item in Model) {
         <tr>
             <td>
+
+
+                @Html.ActionLink("Editar", "Edit", new { id = item.Id_Competencia, strCompetencia = item.Competencia }) |
+
+                @Html.ActionLink("Ver", "Details", new { id = item.Id_Competencia, strCompetencia = item.Competencia }) |
+                @Html.ActionLink("Eliminar", "Delete", new { id = item.Id_Competencia, strCompetencia = item.Competencia })
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Id_Competencia)
+            </td>
+            <td>
                 @Html.DisplayFor(modelItem => item.Competencia)
             </td>
+
+
             <td>
                 @Html.DisplayFor(modelItem => item.Competencias_Desc)
             </td>
@@ -48,11 +68,7 @@
             <td>
                 @Html.DisplayFor(modelItem => item.gbukrs)
             </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id_Competencia">Modificar</a> |
-                <a asp-action="Details" asp-route-id="@item.Id_Competencia">Consultar</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id_Competencia">Eliminar</a>
-            </td>
+
         </tr>
 }
     </tbody>
