--- a/ASPNETCORERoleManagement/Views/Competencias/Details.cshtml
+++ b/ASPNETCORERoleManagement/Views/Competencias/Details.cshtml
@@ -11,12 +11,6 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Competencia)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Competencia)
-        </dd>
-        <dt>
             @Html.DisplayNameFor(model => model.Competencias_Desc)
         </dt>
         <dd>
@@ -43,6 +37,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id_Competencia">Edit</a> |
+    @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
     <a asp-action="Index">Back to List</a>
 </div>
