--- a/ASPNETCORERoleManagement/Views/Competencias/Edit.cshtml
+++ b/ASPNETCORERoleManagement/Views/Competencias/Edit.cshtml
@@ -13,11 +13,7 @@
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id_Competencia" />
-            <div class="form-group">
-                <label asp-for="Competencia" class="control-label"></label>
-                <input asp-for="Competencia" class="form-control" />
-                <span asp-validation-for="Competencia" class="text-danger"></span>
-            </div>
+            <input type="hidden" asp-for="Competencia" />
             <div class="form-group">
                 <label asp-for="Competencias_Desc" class="control-label"></label>
                 <input asp-for="Competencias_Desc" class="form-control" />
