--- a/ASPNETCORERoleManagement/Views/Competencias/Delete.cshtml
+++ b/ASPNETCORERoleManagement/Views/Competencias/Delete.cshtml
@@ -4,13 +4,16 @@
     ViewData["Title"] = "Delete";
 }
 
-<h2>Delete</h2>
+<h2>Eliminar</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+
 <div>
     <h4>Competencias</h4>
     <hr />
     <dl class="dl-horizontal">
+        <dt>
+            @Html.DisplayNameFor(model => model.Id_Competencia )
+        </dt>
         <dt>
             @Html.DisplayNameFor(model => model.Competencias_Desc)
         </dt>
@@ -36,10 +39,10 @@
             @Html.DisplayFor(model => model.gbukrs)
         </dd>
     </dl>
-    
+    <h3>Confirme. ¿Está seguro de eliminar?</h3>    
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id_Competencia" />
-        <input type="submit" value="Delete" class="btn btn-default" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Confirmar" class="btn btn-danger" /> |
+        <a asp-action="Index">Volver a la lista</a>
     </form>
 </div>
