--- a/ASPNETCORERoleManagement/Views/Competencias/Details.cshtml
+++ b/ASPNETCORERoleManagement/Views/Competencias/Details.cshtml
@@ -1,13 +1,17 @@
 ﻿@model ASPNETCORERoleManagement.Models.Competencias
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Visualizar";
 }
 
-<h2>Details</h2>
+<h2>Visualizar</h2>
 
 <div>
     <h4>Competencias</h4>
+    <div>
+        <a asp-action="Edit" asp-route-id="@Model.Id_Competencia">Edit</a> |
+        <a asp-action="Index">Volver a la lista</a>
+    </div>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -36,7 +40,4 @@
         </dd>
     </dl>
 </div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model.Id_Competencia">Edit</a> |
-    <a asp-action="Index">Back to List</a>
-</div>
+
