--- a/ASPNETCORERoleManagement/Views/Competencias/Edit.cshtml
+++ b/ASPNETCORERoleManagement/Views/Competencias/Edit.cshtml
@@ -1,10 +1,10 @@
 ﻿@model ASPNETCORERoleManagement.Models.Competencias
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Actualizar";
 }
 
-<h2>Edit</h2>
+<h2>Actualizar</h2>
 
 <h4>Competencias</h4>
 <hr />
@@ -12,7 +12,7 @@
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Id_Competencia" />
+            <input readonly="readonly" asp-for="Id_Competencia" />
             <div class="form-group">
                 <label asp-for="Competencias_Desc" class="control-label"></label>
                 <input asp-for="Competencias_Desc" class="form-control" />
@@ -23,25 +23,34 @@
                 <input asp-for="Generico" class="form-control" />
                 <span asp-validation-for="Generico" class="text-danger"></span>
             </div>
+            
+            
             <div class="form-group">
                 <label asp-for="bukrs" class="control-label"></label>
-                <input asp-for="bukrs" class="form-control" />
+                <select asp-for="bukrs" class="form-control" 
+                        asp-items="@(new SelectList(ViewBag.Bukrs, "Text", "Value"))"
+                      
+
+                ></select>
+
                 <span asp-validation-for="bukrs" class="text-danger"></span>
             </div>
+
+
             <div class="form-group">
                 <label asp-for="gbukrs" class="control-label"></label>
-                <input asp-for="gbukrs" class="form-control" />
+                <input asp-for="gbukrs" class="form-control" readonly="readonly"  />
                 <span asp-validation-for="gbukrs" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Guardar" class="btn btn-success" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Volver a la lista</a>
 </div>
 
 @section Scripts {
