--- a/ASPNETCORERoleManagement/Views/Competencias/Details.cshtml
+++ b/ASPNETCORERoleManagement/Views/Competencias/Details.cshtml
@@ -8,10 +8,7 @@
 
 <div>
     <h4>Competencias</h4>
-    <div>
-        <a asp-action="Edit" asp-route-id="@Model.Id_Competencia">Edit</a> |
-        <a asp-action="Index">Volver a la lista</a>
-    </div>
+
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -41,3 +38,16 @@
     </dl>
 </div>
 
+<div>
+    
+    
+</div>
+<nav class="navbar navbar-light bg-light">
+
+    <a asp-action="Edit" asp-route-id="@Model.Id_Competencia" class="btn btn-default btn-success ">Actualizar</a> |
+    <a asp-action="Delete" asp-route-id="@Model.Id_Competencia" class="btn btn-default btn-danger">Eliminar</a> |
+    <a asp-action="Index" class="btn  btn-link "> Volver a la lista</a>
+
+
+
+</nav>
