--- a/ASPNETCORERoleManagement/Views/Competencias/Edit.cshtml
+++ b/ASPNETCORERoleManagement/Views/Competencias/Edit.cshtml
@@ -12,7 +12,12 @@
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input readonly="readonly" asp-for="Id_Competencia" />
+
+            <div class="form-group">
+                <label asp-for="gbukrs" class="control-label"></label>
+                <input readonly="readonly" asp-for="Id_Competencia" class="form-control" />
+            </div>
+
             <div class="form-group">
                 <label asp-for="Competencias_Desc" class="control-label"></label>
                 <input asp-for="Competencias_Desc" class="form-control" />
@@ -23,15 +28,12 @@
                 <input asp-for="Generico" class="form-control" />
                 <span asp-validation-for="Generico" class="text-danger"></span>
             </div>
-            
-            
+
+
             <div class="form-group">
                 <label asp-for="bukrs" class="control-label"></label>
-                <select asp-for="bukrs" class="form-control" 
-                        asp-items="@(new SelectList(ViewBag.Bukrs, "Text", "Value"))"
-                      
-
-                ></select>
+                <select asp-for="bukrs" class="form-control"
+                        asp-items="@(new SelectList(ViewBag.Bukrs, "Text", "Value"))"></select>
 
                 <span asp-validation-for="bukrs" class="text-danger"></span>
             </div>
@@ -39,19 +41,23 @@
 
             <div class="form-group">
                 <label asp-for="gbukrs" class="control-label"></label>
-                <input asp-for="gbukrs" class="form-control" readonly="readonly"  />
+                <input asp-for="gbukrs" class="form-control" readonly="readonly" />
                 <span asp-validation-for="gbukrs" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Guardar" class="btn btn-success" />
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Volver a la lista</a>
-</div>
+
+<nav class="navbar navbar-light bg-light">
+
+    <input type="submit" value="Guardar" class="btn btn-default btn-success " />
+    <a asp-action="Index" class="btn  btn-link "> Volver a la lista</a>
+
+
+
+</nav>
+
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
