--- a/ASPNETCORERoleManagement/Views/TipoObjs/Create.cshtml
+++ b/ASPNETCORERoleManagement/Views/TipoObjs/Create.cshtml
@@ -1,42 +1,57 @@
 ﻿@model ASPNETCORERoleManagement.Models.TipoObj
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Tipo de objetivo nuevo.";
 }
 
-<h2>Create</h2>
+<h2>Nuevo</h2>
 
-<h4>TipoObj</h4>
+<h4>Tipo de objetivos.</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="TipoObjetivo_Desc" class="control-label"></label>
-                <input asp-for="TipoObjetivo_Desc" class="form-control" />
-                <span asp-validation-for="TipoObjetivo_Desc" class="text-danger"></span>
+                <label asp-for="TipoObjId" class="control-label"></label>
+                <input asp-for="TipoObjId" class="form-control" />
+                <span asp-validation-for="TipoObjId" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="bukrs" class="control-label"></label>
-                <input asp-for="bukrs" class="form-control" />
-                <span asp-validation-for="bukrs" class="text-danger"></span>
-            </div>
+
             <div class="form-group">
                 <label asp-for="gbukrs" class="control-label"></label>
-                <input asp-for="gbukrs" class="form-control" />
+                <input asp-for="gbukrs" class="form-control" value="@ViewBag.GpoCiaG" readonly="readonly"  />
                 <span asp-validation-for="gbukrs" class="text-danger"></span>
             </div>
+
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <label asp-for="bukrs" class="control-label"></label>
+                
+                <select asp-for="bukrs" class="form-control" asp-items="@ViewBag.Bukrs"></select>
+                <span asp-validation-for="bukrs" class="text-danger"></span>
             </div>
-        </form>
+
+            <div class="form-group">
+                <label asp-for="Descripcion" class="control-label"></label>
+                <input asp-for="Descripcion" class="form-control" />
+                <span asp-validation-for="Descripcion" class="text-danger"></span>
+            </div>
+
+          
+            <nav class="navbar navbar-light bg-light">
+
+                <input type="submit" value="Guardar" class="btn btn-default btn-success " />
+
+                <a asp-action="Index" class="btn btn-default">Regresar</a>
+             </nav> 
+
+
+
+
+</form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
