--- a/ASPNETCORERoleManagement/Views/Competencias/Details.cshtml
+++ b/ASPNETCORERoleManagement/Views/Competencias/Details.cshtml
@@ -1,16 +1,34 @@
 ﻿@model ASPNETCORERoleManagement.Models.Competencias
 
 @{
-    ViewData["Title"] = "Visualizar";
+    ViewData["Title"] = "Details";
 }
 
-<h2>Visualizar</h2>
+<h2>Ver Detalles</h2>
 
 <div>
     <h4>Competencias</h4>
-
     <hr />
     <dl class="dl-horizontal">
+
+        <dt>
+            @Html.DisplayNameFor(model => model.gbukrs)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.gbukrs)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.bukrs)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.bukrs)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Id_Competencia )
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Id_Competencia )
+
         <dt>
             @Html.DisplayNameFor(model => model.Competencias_Desc)
         </dt>
@@ -23,31 +41,16 @@
         <dd>
             @Html.DisplayFor(model => model.Generico)
         </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.bukrs)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.bukrs)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.gbukrs)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.gbukrs)
-        </dd>
     </dl>
 </div>
-
 <div>
-    
+    <nav class="navbar navbar-light bg-light">
+
+        @Html.ActionLink("Editar", "Edit", new { id = Model.Id_Competencia, gbukrs = Model.gbukrs, Bukrs = Model.bukrs }, new { @class = "btn btn-success" })
+        @Html.ActionLink("Editar", "Delete", new { id = Model.Id_Competencia, gbukrs = Model.gbukrs, Bukrs = Model.bukrs }, new { @class = "btn btn-danger" })
+
+        <a asp-action="Index" class="btn btn-default ">Regresar</a>
+
+    </nav>
     
 </div>
-<nav class="navbar navbar-light bg-light">
-
-    <a asp-action="Edit" asp-route-id="@Model.Id_Competencia" class="btn btn-default btn-success ">Actualizar</a> |
-    <a asp-action="Delete" asp-route-id="@Model.Id_Competencia" class="btn btn-default btn-danger">Eliminar</a> |
-    <a asp-action="Index" class="btn  btn-link "> Volver a la lista</a>
-
-
-
-</nav>
