--- a/ASPNETCORERoleManagement/Views/Competencias/Edit.cshtml
+++ b/ASPNETCORERoleManagement/Views/Competencias/Edit.cshtml
@@ -1,10 +1,10 @@
 ﻿@model ASPNETCORERoleManagement.Models.Competencias
 
 @{
-    ViewData["Title"] = "Actualizar";
+    ViewData["Title"] = "Edit";
 }
 
-<h2>Actualizar</h2>
+<h2>Editar</h2>
 
 <h4>Competencias</h4>
 <hr />
@@ -12,12 +12,14 @@
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-
+            <input type="hidden" asp-for="Id_Competencia" />
+            <input type="hidden" asp-for="gbukrs" />
             <div class="form-group">
-                <label asp-for="gbukrs" class="control-label"></label>
-                <input readonly="readonly" asp-for="Id_Competencia" class="form-control" />
+                <label asp-for="bukrs" class="control-label"></label>
+                <input asp-for="bukrs" class="form-control" readonly="readonly"  />
+                <span asp-validation-for="bukrs" class="text-danger"></span>
             </div>
-
+            
             <div class="form-group">
                 <label asp-for="Competencias_Desc" class="control-label"></label>
                 <input asp-for="Competencias_Desc" class="form-control" />
@@ -30,33 +32,18 @@
             </div>
 
 
-            <div class="form-group">
-                <label asp-for="bukrs" class="control-label"></label>
-                <select asp-for="bukrs" class="form-control"
-                        asp-items="@(new SelectList(ViewBag.Bukrs, "Text", "Value"))"></select>
+            <nav class="navbar navbar-light bg-light">
 
-                <span asp-validation-for="bukrs" class="text-danger"></span>
-            </div>
+                <input type="submit" value="Guardar" class="btn btn-default btn-success " />
+                <a asp-action="Index" class="btn btn-default">Regresar</a>
 
 
-            <div class="form-group">
-                <label asp-for="gbukrs" class="control-label"></label>
-                <input asp-for="gbukrs" class="form-control" readonly="readonly" />
-                <span asp-validation-for="gbukrs" class="text-danger"></span>
-            </div>
+
+            </nav>
+
         </form>
     </div>
 </div>
-
-
-<nav class="navbar navbar-light bg-light">
-
-    <input type="submit" value="Guardar" class="btn btn-default btn-success " />
-    <a asp-action="Index" class="btn  btn-link "> Volver a la lista</a>
-
-
-
-</nav>
 
 
 @section Scripts {
