--- a/ASPNETCORERoleManagement/Views/TipoObjs/Delete.cshtml
+++ b/ASPNETCORERoleManagement/Views/TipoObjs/Delete.cshtml
@@ -12,10 +12,10 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.TipoObjetivo_Desc)
+            @Html.DisplayNameFor(model => model.gbukrs)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.TipoObjetivo_Desc)
+            @Html.DisplayFor(model => model.gbukrs)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.bukrs)
@@ -24,15 +24,15 @@
             @Html.DisplayFor(model => model.bukrs)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.gbukrs)
+            @Html.DisplayNameFor(model => model.Descripcion)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.gbukrs)
+            @Html.DisplayFor(model => model.Descripcion)
         </dd>
     </dl>
     
     <form asp-action="Delete">
-        <input type="hidden" asp-for="Id_TipoObj" />
+        <input type="hidden" asp-for="TipoObjId" />
         <input type="submit" value="Delete" class="btn btn-default" /> |
         <a asp-action="Index">Back to List</a>
     </form>
