--- a/ASPNETCORERoleManagement/Views/TipoObjs/Details.cshtml
+++ b/ASPNETCORERoleManagement/Views/TipoObjs/Details.cshtml
@@ -11,10 +11,10 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.TipoObjetivo_Desc)
+            @Html.DisplayNameFor(model => model.gbukrs)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.TipoObjetivo_Desc)
+            @Html.DisplayFor(model => model.gbukrs)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.bukrs)
@@ -23,14 +23,14 @@
             @Html.DisplayFor(model => model.bukrs)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.gbukrs)
+            @Html.DisplayNameFor(model => model.Descripcion)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.gbukrs)
+            @Html.DisplayFor(model => model.Descripcion)
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id_TipoObj">Edit</a> |
+    <a asp-action="Edit" asp-route-id="@Model.TipoObjId">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
