--- a/ASPNETCORERoleManagement/Views/TipoObjs/Create.cshtml
+++ b/ASPNETCORERoleManagement/Views/TipoObjs/Create.cshtml
@@ -11,22 +11,24 @@
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
+
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="TipoObjId" class="control-label"></label>
-                <input asp-for="TipoObjId" class="form-control" />
-                <span asp-validation-for="TipoObjId" class="text-danger"></span>
-            </div>
-
-            <div class="form-group">
                 <label asp-for="gbukrs" class="control-label"></label>
-                <input asp-for="gbukrs" class="form-control" value="@ViewBag.GpoCiaG" readonly="readonly"  />
+                <input asp-for="gbukrs" class="form-control" value="@ViewBag.GpoCiaG" readonly="readonly" />
                 <span asp-validation-for="gbukrs" class="text-danger"></span>
             </div>
 
             <div class="form-group">
+                <label asp-for="TipoObjId" class="control-label"></label>
+                <input asp-for="TipoObjId" class="form-control focus active " />
+                <span asp-validation-for="TipoObjId" class="text-danger"></span>
+            </div>
+
+
+            <div class="form-group">
                 <label asp-for="bukrs" class="control-label"></label>
-                
+
                 <select asp-for="bukrs" class="form-control" asp-items="@ViewBag.Bukrs"></select>
                 <span asp-validation-for="bukrs" class="text-danger"></span>
             </div>
@@ -37,18 +39,18 @@
                 <span asp-validation-for="Descripcion" class="text-danger"></span>
             </div>
 
-          
+
             <nav class="navbar navbar-light bg-light">
 
                 <input type="submit" value="Guardar" class="btn btn-default btn-success " />
 
                 <a asp-action="Index" class="btn btn-default">Regresar</a>
-             </nav> 
+            </nav>
 
 
 
 
-</form>
+        </form>
     </div>
 </div>
 
