--- a/ASPNETCORERoleManagement/Views/TipoObjs/Delete.cshtml
+++ b/ASPNETCORERoleManagement/Views/TipoObjs/Delete.cshtml
@@ -1,16 +1,23 @@
 ﻿@model ASPNETCORERoleManagement.Models.TipoObj
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Eliminar Tipo de Objetivos";
 }
 
-<h2>Delete</h2>
+<h2>Eliminar</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+
 <div>
     <h4>TipoObj</h4>
     <hr />
     <dl class="dl-horizontal">
+        <dt>
+            @Html.DisplayNameFor(model => model.TipoObjId)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.TipoObjId)
+        </dd>
+
         <dt>
             @Html.DisplayNameFor(model => model.gbukrs)
         </dt>
@@ -30,10 +37,14 @@
             @Html.DisplayFor(model => model.Descripcion)
         </dd>
     </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="TipoObjId" />
-        <input type="submit" value="Delete" class="btn btn-default" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
+    <h3>Confirme ¿Está seguro en eliminar?</h3>
+    <nav>
+        <form asp-action="Delete">
+            <input type="hidden" asp-for="TipoObjId" />
+            <input type="submit" value="Confirmar" class="btn btn-danger " />
+            <a asp-action="Index" class="btn btn-default">Regresar</a>
+        </form>
+    </nav>
+
+
 </div>
