--- a/ASPNETCORERoleManagement/Views/TipoObjs/Details.cshtml
+++ b/ASPNETCORERoleManagement/Views/TipoObjs/Details.cshtml
@@ -4,12 +4,32 @@
     ViewData["Title"] = "Details";
 }
 
-<h2>Details</h2>
+<ul class="nav nav-tabs">
+    <li role="presentation" class="active"><a href="#">Detalles</a></li>
+    <li role="presentation">
+        <a asp-controller="Objetivos"
+           asp-action="Index"
+           asp-route-id="@ViewBag.TipoObjID">
+            Objetivos
+        </a>
+
+    </li>
+    <li role="presentation"><a href="#">Messages</a></li>
+</ul>
+
+<h2>Tipo de Objetivos</h2>
 
 <div>
-    <h4>TipoObj</h4>
+
     <hr />
     <dl class="dl-horizontal">
+        <dt>
+            @Html.DisplayNameFor(model => model.TipoObjId)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.TipoObjId)
+        </dd>
+
         <dt>
             @Html.DisplayNameFor(model => model.gbukrs)
         </dt>
@@ -30,7 +50,9 @@
         </dd>
     </dl>
 </div>
+
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.TipoObjId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model.TipoObjId" class="btn btn-success">Editar</a>
+    <a asp-action="Delete" asp-route-id="@Model.TipoObjId" class="btn btn-danger ">Eliminar</a>
+    <a asp-action="Index" class="btn btn-default">Regresar</a>
 </div>
