--- a/ASPNETCORERoleManagement/Views/Objetivos/Edit.cshtml
+++ b/ASPNETCORERoleManagement/Views/Objetivos/Edit.cshtml
@@ -30,7 +30,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="TipoObjId" class="control-label"></label>
-                <input asp-for="TipoObjId" class="form-control" />
+                <select asp-for="TipoObjId" class="form-control" asp-items="ViewBag.TipoObjId"></select>
                 <span asp-validation-for="TipoObjId" class="text-danger"></span>
             </div>
             <div class="form-group">
