Revert "Objetivos con FK"
This reverts commit 7ac0e25940d91a33113ef4dbcf1eb0b5d88f3581.

--- a/ASPNETCORERoleManagement/Views/Objetivos/Create.cshtml
+++ b/ASPNETCORERoleManagement/Views/Objetivos/Create.cshtml
@@ -10,8 +10,15 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
+        
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div class="form-group">
+                <label asp-for="IdObjetivo" class="control-label"></label>
+                <input asp-for="IdObjetivo" class="form-control" />
+                <span asp-validation-for="IdObjetivo" class="text-danger"></span>
+            </div>
+
             <div class="form-group">
                 <label asp-for="Descripcion" class="control-label"></label>
                 <input asp-for="Descripcion" class="form-control" />
@@ -29,9 +36,13 @@
             </div>
             <div class="form-group">
                 <label asp-for="TipoObjId" class="control-label"></label>
-                <select asp-for="TipoObjId" class ="form-control" asp-items="ViewBag.TipoObjId"></select>
+                <input asp-for="IdObjetivo" value="@ViewBag.TipoObjetivo" />
+                @*<input asp-for="IdObjetivo" value="@ViewBag.DescObjetivo"    class="form-control"  readonly="readonly"  />*@                
+                <span asp-validation-for="TipoObjId" class="text-danger"></span>
             </div>
             <div class="form-group">
+                
+                <input type="hidden" asp-for="IdObjetivo" value="@ViewBag.TipoObjetivo" />
                 <input type="submit" value="Create" class="btn btn-default" />
             </div>
         </form>
