--- a/ASPNETCORERoleManagement/Views/Objetivos/Delete.cshtml
+++ b/ASPNETCORERoleManagement/Views/Objetivos/Delete.cshtml
@@ -30,10 +30,10 @@
             @Html.DisplayFor(model => model.Fin)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.TipoObj)
+            @Html.DisplayNameFor(model => model.TipoObjId)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.TipoObj.TipoObjId)
+            @Html.DisplayFor(model => model.TipoObjId)
         </dd>
     </dl>
     
