--- a/ASPNETCORERoleManagement/Views/Objetivos/Index.cshtml
+++ b/ASPNETCORERoleManagement/Views/Objetivos/Index.cshtml
@@ -3,51 +3,68 @@
 @{
     ViewData["Title"] = "Index";
 }
+<ul class="nav nav-tabs">
 
-<h2>Index</h2>
+    <li role="presentation">
+        <a asp-controller="TipoObjs"
+           asp-action="Details"
+           asp-route-id="@ViewBag.TipoObjID">
+            Objetivos
+        </a>
+
+    </li>
+    <li role="presentation" class="active"><a href="#">Objetivos</a></li>
+
+    <li role="presentation"><a href="#">Messages</a></li>
+</ul>
+
+<h2>Objetivos</h2>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    
+    <a asp-controller="Objetivos" asp-action="Create" asp-route-id="@ViewBag.TipoObjID">Nuevo</a>
 </p>
 <table class="table">
     <thead>
         <tr>
-                <th>
-                    @Html.DisplayNameFor(model => model.Descripcion)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Inicio)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Fin)
-                </th>
             <th>
-                @Html.DisplayNameFor(model => model.TipoObj)
+                @Html.DisplayNameFor(model => model.Descripcion)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Inicio)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Fin)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.TipoObjId)
             </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Descripcion)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Inicio)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Fin)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.TipoObj.TipoObjId)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.IdObjetivo">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.IdObjetivo">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.IdObjetivo">Delete</a>
-            </td>
-        </tr>
-}
+
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Descripcion)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Inicio)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Fin)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.TipoObjId)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.IdObjetivo">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.IdObjetivo">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.IdObjetivo">Delete</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
