--- a/ASPNETCORERoleManagement/Views/Objetivos/Create.cshtml
+++ b/ASPNETCORERoleManagement/Views/Objetivos/Create.cshtml
@@ -13,6 +13,14 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
+
+                <label asp-for="IdObjetivo" class="control-label"></label>
+
+                <input asp-for="IdObjetivo" class="form-control" />
+                <span asp-validation-for="IdObjetivo" class="text-danger"></span>
+            </div>
+
+            <div class="form-group">
                 <label asp-for="Descripcion" class="control-label"></label>
                 <input asp-for="Descripcion" class="form-control" />
                 <span asp-validation-for="Descripcion" class="text-danger"></span>
@@ -29,17 +37,22 @@
             </div>
             <div class="form-group">
                 <label asp-for="TipoObjId" class="control-label"></label>
-                <select asp-for="TipoObjId" class ="form-control" asp-items="ViewBag.TipoObjId"></select>
+                <input asp-for="TipoObjId" class="form-control" value="@ViewBag.TipoObjId" />
+
+                <span asp-validation-for="TipoObjId" class="text-danger"></span>
+
+
             </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-default" />
-            </div>
+            <nav class="navbar navbar-light bg-light">
+                <input type="submit" value="Create" class="btn btn-success " />
+                <a asp-action="Index" asp-route-TipoObjId="@ViewBag.TipoObjId" class="btn btn-default">cancelar</a>
+            </nav>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    
 </div>
 
 @section Scripts {
